<?xml version="1.0" encoding="UTF-8"?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.8.RELEASE</version>

		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>org.philmaster</groupId>
	<artifactId>joinfaces-boot-jetty-cdi</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<name>joinfaces-boot-jetty-cdi</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>

		<joinfaces.version>4.0.7</joinfaces.version>

		<primefaces-theme.version>1.0.10</primefaces-theme.version>

		<heroku.version>2.0.7</heroku.version>

		<cayenne.version>4.1.M2</cayenne.version>
		<cayenne.modeler.version>4.1.M1</cayenne.modeler.version>

		<database.driver>org.postgresql.Driver</database.driver>
		<database.url>jdbc:postgresql://localhost:5432/database</database.url>
		<database.user>postgres</database.user>
		<database.password>postgres</database.password>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.joinfaces</groupId>
				<artifactId>joinfaces-dependencies</artifactId>
				<version>${joinfaces.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
			<version>7.0</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces.extensions</groupId>
			<artifactId>primefaces-extensions</artifactId>
			<version>7.0</version>
		</dependency>

		<dependency>
			<groupId>org.joinfaces</groupId>
			<artifactId>jetty-spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.joinfaces</groupId>
			<artifactId>weld-spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.interceptor</groupId>
			<artifactId>javax.interceptor-api</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>org.joinfaces</groupId>
			<artifactId>primefaces-spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.joinfaces</groupId>
					<artifactId>tomcat-spring-boot-starter</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.joinfaces</groupId>
			<artifactId>security-spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.joinfaces</groupId>
					<artifactId>tomcat-spring-boot-starter</artifactId>
				</exclusion>
			</exclusions>
		</dependency>


		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-data-redis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate.validator</groupId>
					<artifactId>hibernate-validator</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
		</dependency>
		<!-- DB automatic Migration -->
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
    	<!-- AdminLTE Layout 
		<dependency>
			<groupId>com.github.adminfaces</groupId>
			<artifactId>admin-theme</artifactId>
		</dependency>
		 -->

		<!-- Postgres -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<!-- JSF
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.faces</artifactId>
		</dependency>
 -->
		<!-- Joinfaces 
		<dependency>
			<groupId>org.joinfaces</groupId>
			<artifactId>jetty-spring-boot-starter</artifactId>
		</dependency>


-->

		<!-- Cayenne -->
		<dependency>
			<groupId>org.apache.cayenne</groupId>
			<artifactId>cayenne-server</artifactId>
			<version>${cayenne.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.cayenne.modeler</groupId>
			<artifactId>cayenne-modeler</artifactId>
			<version>${cayenne.modeler.version}</version>
		</dependency>
		
		<!-- Misc -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.12.1</version>
		</dependency>
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.7</version>
			<exclusions>
				<exclusion>
					<groupId>bouncycastle</groupId>
					<artifactId>bcmail-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>bouncycastle</groupId>
					<artifactId>bcprov-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bctsp-jdk14</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Tests -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.joinfaces</groupId>
					<artifactId>joinfaces-maven-plugin</artifactId>
					<version>${joinfaces.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
           <plugin>
                <groupId>org.joinfaces</groupId>
                <artifactId>joinfaces-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

			<plugin>
				<groupId>org.apache.cayenne.plugins</groupId>
				<artifactId>cayenne-modeler-maven-plugin</artifactId>
				<version>${cayenne.modeler.version}</version>
				<configuration>
					<map>${basedir}/src/main/resources/datamap.map.xml</map>
					<modelFile>>${basedir}/src/main/resources/cayenne-project.xml</modelFile>
					<adapter>org.apache.cayenne.dba.postgres.PostgresAdapter</adapter>
					<dataSource>
						<driver>${database.driver}</driver>
						<url>${database.url}</url>
						<username>${database.user}</username>
						<password>${database.password}</password>
					</dataSource>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.heroku.sdk</groupId>
				<artifactId>heroku-maven-plugin</artifactId>
				<version>${heroku.version}</version>
				<configuration>
					<includeTarget>false</includeTarget>
					<includes>
						<include>target/joinfaces-boot-jetty-cdi-1.0.0.jar</include>
					</includes>
					<appName>ancient-gorge-66249</appName>
					<processTypes>
						<web>java $JAVA_OPTS -Dserver.port=$PORT -jar target/joinfaces-boot-jetty-cdi-1.0.0.jar</web>
					</processTypes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-maven-plugin</artifactId>
				<configuration>
					<driver>${database.driver}</driver>
					<url>${database.url}</url>
					<user>${database.user}</user>
					<password>${database.password}</password>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>primefaces-maven-repository</id>
			<name>PrimeFaces Maven Repository</name>
			<url>http://repository.primefaces.org</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-milestones</id>
			<url>http://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<url>http://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
